crates/scheduler/tests/trybuild/fail/serde_container_unknown.stderr
error: this serde container attribute is incompatible with ScheduledTaskParams
 --> tests/trybuild/fail/serde_container_unknown.rs:5:9
  |
5 | #[serde(bound = "")]
  |         ^^^^^^^^^^
